--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -2,50 +2,68 @@
   <div class="col-12">
     <div class="flex justify-content-center align-content-center text-align-center">
       <!--Login-->
-      <form>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmitLoginForm()">
         <p-card
           styleClass="mt-10"
           header="Login"
           subheader="Faça Login com a sua conta existente"
           *ngIf="loginCard">
           <div class="flex justify-content-center align-content-center text-align-center">
-            <input type="email" pInputText placeholder="E-mail" />
+            <input type="email"
+            pInputText placeholder="E-mail"
+            formControlName="email" />
           </div>
 
           <div class="flex justify-content-center align-content-center text-align-center mt-3">
-            <input type="password" pInputText placeholder="Senha" />
+            <input type="password"
+            pInputText placeholder="Senha"
+            formControlName="password">
           </div>
           <div class="card flex justify-content-center mt-3">
-            <button type="submit" pButton pRipple label="Login"></button>
+            <button type="submit"
+            pButton pRipple label="Login"
+            [disabled] ="!this.loginForm.valid"></button>
           </div>
           <span
           class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
           style="cursor: pointer"
           (click)="loginCard =!loginCard"
-          >
+           >
 
           Criar Conta
           </span>
         </p-card>
       </form>
       <!--SIGN-UP-->
-      <form>
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmitSingupForm()">
         <p-card styleClass="mt-10"
           header="Criar Conta"
           subheader="Crie já a sua conta gratuita"
           *ngIf="!loginCard">
         <div class="flex justify-content-center align-content-center text-align-center">
-          <input type="text" pInputText placeholder="Nome" />
+          <input type="text"
+          pInputText
+          placeholder="Nome"
+          formControlName="name" />
         </div>
 
         <div class="flex justify-content-center align-content-center text-align-center mt-3">
-          <input type="email" pInputText placeholder="E-mail" />
+          <input type="email"
+          pInputText placeholder="E-mail"
+          formControlName="email" />
         </div>
         <div class="flex justify-content-center align-content-center text-align-center mt-3">
-          <input type="password" pInputText placeholder="Senha" />
+          <input type="password"
+          pInputText
+          placeholder="Senha"
+          formControlName="password" />
         </div>
         <div class="card flex justify-content-center mt-3">
-          <button type="submit" pButton pRipple label="Criar Conta"></button>
+          <button type="submit"
+          pButton pRipple
+          label="Criar Conta"
+          [disabled]="!this.signupForm.valid"
+          ></button>
         </div>
         <span class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
         style="cursor: pointer"
