--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
+<p-toast
+  position="top-right"
+  [showTransformOptions]="'translateY(100%)'"
+  [showTransitionOptions]="'1000ms'"
+  [hideTransitionOptions]="'1000ms'"
+  [showTransformOptions]="'translateX(100%)'"
+  [breakpoints]="{'920px': {width: '100%', right: '0', left: '0'}}"
+  ></p-toast>
+
+
 <!--//utilizado para informar ao angular que as nossas rotas da aplicação serão renderizadas em tela -->
 <router-outlet></router-outlet>
